--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ theme_mode: dark # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/profile.png
+avatar: /assets/img/favicons/profile.jpg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
